# Ghosts

./: .gitignore  README.md  SCENE_BUILDING.md  effects.py  main.py  pyproject.toml  renderer.py  scene_base.py
debian/: changelog  control  copyright  install  links
scenes/: __init__.py  bioscan.py  computersim.py  ghost.py  glitch.py  matrix.py  plasma.py  rain.py  slideshow.py  switchboard.py  topo.py
